--- a/Check.SPort/Check.SPort.csproj
+++ b/Check.SPort/Check.SPort.csproj
@@ -8,8 +8,8 @@
     <UseWPF>true</UseWPF>
     <SupportedOSPlatformVersion>10.0.22621.0</SupportedOSPlatformVersion>
     <StartupObject></StartupObject>
-    <ApplicationIcon>Resources\Image\icons8-registratore-di-cassa-100.ico</ApplicationIcon>
-    <PackageIcon>icons8-registratore-di-cassa-100.png</PackageIcon>
+    <PackageIcon></PackageIcon>
+    <UseWindowsForms>False</UseWindowsForms>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,17 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Resources\Image\icons8-registratore-di-cassa-100.ico" />
     <Content Include="Resources\Image\sfondo_001.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Resources\Image\icons8-registratore-di-cassa-100.png">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
   </ItemGroup>
 
 </Project>
