altre modifiche grafiche

--- a/Check.SPort/Check.SPort.csproj
+++ b/Check.SPort/Check.SPort.csproj
@@ -1,37 +1,42 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <UseWPF>true</UseWPF>
-    <SupportedOSPlatformVersion>10.0.22621.0</SupportedOSPlatformVersion>
-    <StartupObject></StartupObject>
-    <PackageIcon></PackageIcon>
-    <UseWindowsForms>False</UseWindowsForms>
-    <AssemblyName>Check Connection Protocoll</AssemblyName>
-    <AssemblyVersion>1.0.3</AssemblyVersion>
-    <FileVersion>1.0.3</FileVersion>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>WinExe</OutputType>
+		<TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
+		<Nullable>disable</Nullable>
+		<UseWPF>true</UseWPF>
+		<SupportedOSPlatformVersion>10.0.22621.0</SupportedOSPlatformVersion>
+		<UseWindowsForms>False</UseWindowsForms>
+		<AssemblyName>Check Connection Protocoll</AssemblyName>
+		<AssemblyVersion>1.0.3</AssemblyVersion>
+		<FileVersion>1.0.3</FileVersion>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="Resources\Image\sfondo_001.jpg" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Remove="Resources\Image\sfondo_001.jpg" />
+		<None Remove="Resources\Image\home_page.jpg" />
+		<None Remove="Resources\Image\shutdown_def.jpg" />
+		<None Remove="Resources\Image\shutdown_mo.jpg" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="MaterialDesignThemes" Version="5.0.0" />
-    <PackageReference Include="System.IO.Ports" Version="8.0.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="MaterialDesignThemes" Version="5.0.0" />
+		<PackageReference Include="System.IO.Ports" Version="8.0.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Content Include="Resources\Image\sfondo_001.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Resources\Fonts\" />
-  </ItemGroup>
+	<ItemGroup>
+		<Content Include="Resources\Image\sfondo_001.jpg">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Resources\Image\home_page.png">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Resources\Image\shutdown_def.png">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Resources\Image\shutdown_mo.png">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
 
 </Project>
