--- a/Check.SPort/Check.SPort.csproj
+++ b/Check.SPort/Check.SPort.csproj
@@ -13,10 +13,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<None Remove="Resources\Image\home_sfondo_2.png" />
 		<None Remove="Resources\Image\sfondo_001.jpg" />
-		<None Remove="Resources\Image\home_page.jpg" />
-		<None Remove="Resources\Image\shutdown_def.jpg" />
-		<None Remove="Resources\Image\shutdown_mo.jpg" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -25,16 +23,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Content Include="Resources\Image\home_sfondo_2.png">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
 		<Content Include="Resources\Image\sfondo_001.jpg">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
-		<Content Include="Resources\Image\home_page.png">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
-		<Content Include="Resources\Image\shutdown_def.png">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
-		<Content Include="Resources\Image\shutdown_mo.png">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
 	</ItemGroup>
