--- a/Check.SPort/Check.SPort.csproj
+++ b/Check.SPort/Check.SPort.csproj
@@ -41,4 +41,10 @@
 	  </Reference>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Page Update="Styles\ComboBoxs.xaml">
+	    <CopyToOutputDirectory></CopyToOutputDirectory>
+	  </Page>
+	</ItemGroup>
+
 </Project>
