--- a/Check.SPort/Check.SPort.csproj
+++ b/Check.SPort/Check.SPort.csproj
@@ -8,12 +8,14 @@
 		<SupportedOSPlatformVersion>10.0.22621.0</SupportedOSPlatformVersion>
 		<UseWindowsForms>True</UseWindowsForms>
 		<AssemblyName>ProtocolConnection</AssemblyName>
-		<AssemblyVersion>2.0.1</AssemblyVersion>
-		<FileVersion>2.0.1</FileVersion>
-		<ApplicationIcon>Icon_Tool.ico</ApplicationIcon>
-		<Version>2.0.3</Version>
+		<AssemblyVersion>2.0.4</AssemblyVersion>
+		<FileVersion>2.0.4</FileVersion>
+		<ApplicationIcon>Resources\Image\Icon_Tool.ico</ApplicationIcon>
+		<Version>2.0.4</Version>
 		<PackageIcon>Img_Tool.png</PackageIcon>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<NeutralLanguage>it</NeutralLanguage>
+		<Authors>Francesco Rubino</Authors>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -29,7 +31,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Content Include="Icon_Tool.ico" />
 		<Content Include="Resources\DLL\CustomEngineering.CeFCom.dll">
 		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
